# IXAAC

./: .gitignore  2ndeye.md  LICENSE  README.md  idea.md  plugin.txt  pyproject.toml  samplerun
.claude/: settings.json
.github/workflows/: codeql.yml
proposals/: ref-system.md
xli/: __init__.py  __main__.py  agent.py  bootstrap.py  cli.py  client.py  config.py  cost.py  daemon.py  doc.py  ignore.py  manifest.py  persona.py  plugin.py  plugin_manifest.py  pool.py  registry.py  secondary_ai.py  server_tools.py  sync.py  tools.py  transcript.py  vault.py  workspaces.py
xli/cli/: __init__.py  ask.py  attachments.py  auth.py  bootstrap.py  cli.py  debug.py  doc.py  key_ops.py  parser.py  plugin.py  project.py  repl.py  setup.py  slash_commands.py  status.py
xli/cli_new/: cli.py  keys.py  models.py  project.py  repl.py  slash_commands.py
xli/stock_plugins/: alpha-vantage.md  aviationstack.md  bluesky.md  coingecko.md  courtlistener.md  gdelt.md  google-news.md  hackernews.md  open-meteo.md  wikipedia.md  xtwitter.md
xli/tools/: __init__.py  context.py  schemas.py
xli/tools/execution/: __init__.py  bash.py  code_execute.py
xli/tools/io/: __init__.py  edit_file.py  glob.py  grep.py  list_dir.py  locate_then_read.py  read_file.py  summarize_file.py  write_file.py
xli/tools_new/: __init__.py  bash.py  code_execute.py  context.py  edit_file.py  glob.py  grep.py  helpers.py  list_dir.py  locate_then_read.py  plan.py  plugin_get.py  plugin_search.py  read_file.py  search_project.py  summarize_file.py  web_search.py  write_file.py  x_search.py
(+8 files in other folders)
